updates navbar styling

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link
+      rel="icon"
+      href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAiklEQVR42mP4z0AcYsDAN+AUjPoDzA8gOsA7ABsgPMB8gGH4A5AecHcAA+EyDZ9kSKJZVQHAAPIUUrBBrAYnQBEeP4NBzA8iXgGJnkwAsEYDLwP6Mqowk5gApwOwAOwrnUDW8o3UAAAAASUVORK5CYII="
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry's House</title>
   </head>
