adds shopping cart icon

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
       href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAiklEQVR42mP4z0AcYsDAN+AUjPoDzA8gOsA7ABsgPMB8gGH4A5AecHcAA+EyDZ9kSKJZVQHAAPIUUrBBrAYnQBEeP4NBzA8iXgGJnkwAsEYDLwP6Mqowk5gApwOwAOwrnUDW8o3UAAAAASUVORK5CYII="
       type="image/png"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry's House</title>
   </head>
