general styling and implements add/subtract products directly from product info popup

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAiklEQVR42mP4z0AcYsDAN+AUjPoDzA8gOsA7ABsgPMB8gGH4A5AecHcAA+EyDZ9kSKJZVQHAAPIUUrBBrAYnQBEeP4NBzA8iXgGJnkwAsEYDLwP6Mqowk5gApwOwAOwrnUDW8o3UAAAAASUVORK5CYII="
+      href="http://localhost:3000/assets/logo/corgi_logo2.png"
       type="image/png"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
