updates server address to dynamic webpath using VITE API SERVER BASEPATH. updates seed to reflect the change too

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="/assets/logo/corgi_logo2.png"
+      href="http://localhost:3000/assets/logo/corgi_logo2.png"
       type="image/png"
     />
     <script src="https://kit.fontawesome.com/f879dcc1a9.js" crossorigin="anonymous"></script>
