--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,10 @@
       href="http://localhost:3000/assets/logo/corgi_logo2.png"
       type="image/png"
     />
-    <script src="https://kit.fontawesome.com/f879dcc1a9.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f879dcc1a9.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry's House</title>
   </head>
